--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>espaco-nave</title>
     <meta name="description" content="edex" />
     <meta name="author" content="ederx" />
-
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 
     <meta property="og:type" content="website" />
